# TarefaADC

./: ADC.c  CMakeLists.txt  README.md
